jenkins/jenkinsservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 8080      # Port ของ Service
      targetPort: 8080
